Enable native access for Compose desktop