@@ -113,6 +113,10 @@ kotlin {
 compose.desktop {
     application {
         mainClass = "com.tajemniktv.tajsos.MainKt"
+        jvmArgs += listOf(
+            "--enable-native-access=ALL-UNNAMED",
+            "--sun-misc-unsafe-memory-access=allow",
+        )
 
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
